** simple errorhandler.go ** add problem json
