# docs/openapi.yaml
@@ -42,8 +42,11 @@ paths:
         description: The numbers of items to return
       responses:
         "400":
-          description: Invalid filters supplied
-          content: {}
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
         "200":
           description: successful operation
           content:
@@ -52,10 +55,6 @@ paths:
                   type: array
                   items:
                     $ref: '#/components/schemas/Pet'
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
       x-codegen-request-body-name: body
     post:
       tags:
@@ -70,19 +69,30 @@ paths:
               $ref: '#/components/schemas/Pet'
         required: true
       responses:
-        "405":
+        "400":
           description: Invalid input
-          content: {}
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "409":
+          description: Conflict
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
         "201":
           description: Created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Pet'
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
       x-codegen-request-body-name: body
   /pets/{petId}:
     get:
@@ -100,20 +110,24 @@ paths:
             type: integer
             format: int64
       responses:
+        "400":
+          description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
         "200":
           description: successful operation
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Pet'
-        "400":
-          description: Invalid ID supplied
-          content: {}
-        "404":
-          description: Pet not found
-          content: {}
-      security:
-        - api_key: []
     put:
       tags:
         - pet
@@ -133,26 +147,33 @@ paths:
             schema:
               $ref: "#/components/schemas/Pet"
       responses:
-        "200":
-          description: ok
-          content: {}
         "400":
           description: Invalid input
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "409":
+          description: Conflict
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "202":
+          description: ok
           content: {}
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
     delete:
       tags:
         - pet
       summary: Deletes a pet
       operationId: deletePet
       parameters:
-        - name: api_key
-          in: header
-          schema:
-            type: string
         - name: petId
           in: path
           description: Pet id to delete
@@ -163,17 +184,19 @@ paths:
       responses:
         "400":
           description: Invalid ID supplied
-          content: {}
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Problem'
         "404":
           description: Pet not found
-          content: {}
-        "200":
-          description: Pet not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "204":
+          description: ok
           content: { }
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
 components:
   schemas:
     Category:
@@ -200,16 +223,31 @@ components:
         name:
           type: string
           example: doggie
-  securitySchemes:
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
-    petstore_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore.swagger.io/oauth/authorize
-          scopes:
-            read:pets: read your pets
-            write:pets: modify pets in your account
+    Problem:
+      title: An RFC 9457 problem object
+      type: object
+      required:
+        - status
+        - title
+        - instance
+        - detail
+      properties:
+        type:
+          type: string
+          format: uri-reference
+          description: A URI reference that identifies the problem type.
+        title:
+          type: string
+          description: A short, human-readable summary of the problem type.
+        status:
+          type: integer
+          description: The HTTP status code generated by the origin server for this occurrence of the problem.
+          minimum: 100
+          maximum: 599
+        detail:
+          type: string
+          description: A human-readable explanation specific to this occurrence of the problem.
+        instance:
+          type: string
+          format: uri-reference
+          description: A URI reference that identifies the specific occurrence of the problem. It may or may not yield further information if dereferenced.
