# internal/http/model_gen.go
@@ -3,11 +3,6 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package http
 
-const (
-	Api_keyScopes       = "api_key.Scopes"
-	Petstore_authScopes = "petstore_auth.Scopes"
-)
-
 // Category defines model for Category.
 type Category struct {
 	Id   *int64 `json:"id,omitempty"`
@@ -21,6 +16,24 @@ type Pet struct {
 	Name     string   `json:"name"`
 }
 
+// Problem defines model for Problem.
+type Problem struct {
+	// Detail A human-readable explanation specific to this occurrence of the problem.
+	Detail string `json:"detail"`
+
+	// Instance A URI reference that identifies the specific occurrence of the problem. It may or may not yield further information if dereferenced.
+	Instance string `json:"instance"`
+
+	// Status The HTTP status code generated by the origin server for this occurrence of the problem.
+	Status int `json:"status"`
+
+	// Title A short, human-readable summary of the problem type.
+	Title string `json:"title"`
+
+	// Type A URI reference that identifies the problem type.
+	Type *string `json:"type,omitempty"`
+}
+
 // GetPetsParams defines parameters for GetPets.
 type GetPetsParams struct {
 	// Category The category name to filter pets
@@ -31,11 +44,6 @@ type GetPetsParams struct {
 
 	// Limit The numbers of items to return
 	Limit *int `form:"limit,omitempty" json:"limit,omitempty"`
-}
-
-// DeletePetParams defines parameters for DeletePet.
-type DeletePetParams struct {
-	ApiKey *string `json:"api_key,omitempty"`
 }
 
 // AddPetJSONRequestBody defines body for AddPet for application/json ContentType.
